--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "engines": {
         "vscode": "^1.20.0"
     },
+    "icon": "media/logo.png",
     "categories": [
         "Other"
     ],
