Add default keybinding to the extension

--- a/package.json
+++ b/package.json
@@ -29,6 +29,14 @@
                 "command": "extension.alternative",
                 "title": "Alternative"
             }
+        ],
+        "keybindings": [
+          {
+            "key": "alt + a",
+            "command": "extension.alternative",
+            "when": "editorTextFocus"
+          }
+
         ]
     },
     "scripts": {
